updated schemas and created routes

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "target": "ES2020",
-        "sourceMap": true,
-        "outDir": "dist", 
-    },
-    "include": ["src/**/*", "src/*.d.ts."],
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2020",
+    "sourceMap": true,
+    "baseUrl": "src",
+    "outDir": "dist",
+    "noImplicitAny": true
+  },
+  "include": ["src/**/*", "src/env.d.ts"]
 }
