--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "tsc -w"
+    "start": "nodemon",
+    "test": "echo \" Error: no test specified \" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.3.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/validator": "^13.7.17",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
