--- a/backend/package.json
+++ b/backend/package.json
@@ -20,13 +20,17 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.17",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "date-format": "^4.0.14",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
   }
 }
