login logout and register functionality added

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,6 +29,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/api/.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
