--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -29,10 +30,12 @@
     "react-hook-form": "^7.45.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
+    "react-useanimations": "^2.10.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
