--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query-devtools": "^4.29.19",
@@ -30,8 +31,10 @@
     "react-hook-form": "^7.45.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
+    "react-select": "^5.7.4",
     "react-useanimations": "^2.10.0",
     "tailwind-merge": "^1.13.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.6",
     "vite-tsconfig-paths": "^4.2.0",
     "zod": "^3.21.4",
